--- a/axelor-web/src/main/webapp/css/navtree.css
+++ b/axelor-web/src/main/webapp/css/navtree.css
@@ -50,15 +50,16 @@
 
 .nav-tree li.active a {
 	background-color: #0074CC;
-	background-image: -moz-linear-gradient(top, #08C, #05C);
-	background-image: -ms-linear-gradient(top, #08C, #05C);
-	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#08C), to(#05C));
-	background-image: -webkit-linear-gradient(top, #08C, #05C);
-	background-image: -o-linear-gradient(top, #08C, #05C);
-	background-image: linear-gradient(top, #08C, #05C);
-	background-repeat: repeat-x;
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088cc', endColorstr='#0055cc', GradientType=0);
 	border-color: #05C #05C #003580;
 	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-	filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+}
+
+@media screen and (max-width: 768px) {
+	.nav-tree li a {
+		padding: 10px 0;
+	}
+	.nav-tree li i.fa {
+		width: 22px;
+		font-size: 16px;
+	}
 }
