--- a/axelor-web/src/main/webapp/partials/views/grid.html
+++ b/axelor-web/src/main/webapp/partials/views/grid.html
@@ -6,11 +6,11 @@
           <button class="btn" ng-click="onNew()" ng-if="hasButton('new')" ng-disabled="canSave()" title="{{ 'New' | t}}">
             <i class="fa fa-plus"></i> <span ng-hide="tbTitleHide" x-translate>New</span>
           </button>
-          <button class="btn" ng-click="onEdit()" ng-if="hasButton('edit')" ng-disabled="!canEdit()" title="{{ 'Edit' | t}}">
+          <button class="btn hidden-phone" ng-click="onEdit()" ng-if="hasButton('edit')" ng-disabled="!canEdit()" title="{{ 'Edit' | t}}">
             <i class="fa fa-pencil"></i> <span ng-hide="tbTitleHide" x-translate>Edit</span>
           </button>
-          <button ui-update-button x-handler="this" ng-if="hasButton('edit') && canMassUpdate()" title="{{ 'Mass Update' | t}}"></button>
-          <button class="btn" ng-click="onSave()" ng-if="hasButton('save') && canEditInline()" ng-disabled="!canSave()" title="{{ 'Save' | t}}">
+          <button class="hidden-phone" ui-update-button x-handler="this" ng-if="hasButton('edit') && canMassUpdate()" title="{{ 'Mass Update' | t}}"></button>
+          <button class="btn hidden-phone" ng-click="onSave()" ng-if="hasButton('save') && canEditInline()" ng-disabled="!canSave()" title="{{ 'Save' | t}}">
             <i class="fa fa-floppy-o"></i> <span ng-hide="tbTitleHide" x-translate>Save</span>
           </button>
           <button class="btn" ng-click="onDelete()" ng-if="hasButton('delete')" ng-disabled="!canDelete()" title="{{ 'Delete' | t}}">
