--- a/axelor-web/src/main/webapp/css/slickgrid.css
+++ b/axelor-web/src/main/webapp/css/slickgrid.css
@@ -30,12 +30,12 @@
 
 	background-color: #f5f5f5;
   
-	background-image: -moz-linear-gradient(top, white, #E6E6E6);
-	background-image: -ms-linear-gradient(top, white, #E6E6E6);
-	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(white), to(#E6E6E6));
-	background-image: -webkit-linear-gradient(top, white, #E6E6E6);
-	background-image: -o-linear-gradient(top, white, #E6E6E6);
-	background-image: linear-gradient(top, white, #E6E6E6);
+	background-image: -moz-linear-gradient(top, #F5F5F5, #E6E6E6);
+	background-image: -ms-linear-gradient(top, #F5F5F5, #E6E6E6);
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#F5F5F5), to(#E6E6E6));
+	background-image: -webkit-linear-gradient(top, #F5F5F5, #E6E6E6);
+	background-image: -o-linear-gradient(top, #F5F5F5, #E6E6E6);
+	background-image: linear-gradient(top, #F5F5F5, #E6E6E6);
 	background-repeat: repeat-x;
 	
 	-webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
