Responsive popup view.

--- a/axelor-web/src/main/webapp/css/slickgrid.css
+++ b/axelor-web/src/main/webapp/css/slickgrid.css
@@ -182,6 +182,11 @@
 	min-width: 250px;
 }
 
+.ui-dialog .slickgrid {
+	position: absolute;
+	top: 4px; right: 4px; bottom: 4px; left: 4px;
+}
+
 .ui-dialog .slick-editor-dropdown .slickgrid {
 	position: relative;
 	top: 0; right: 0; border: 0; left: 0;
