Improved TagSelect widget.

--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -878,6 +878,10 @@ table.field-details .help-text hr {
 	margin-right: 0;
 }
 
+.tag-select span.label:first-child {
+	margin-left: 0;
+}
+
 .tag-select li.tag-item {
 	
 }
