Added some special css classes.

--- a/axelor-web/src/main/webapp/css/view.form.panels.css
+++ b/axelor-web/src/main/webapp/css/view.form.panels.css
@@ -211,3 +211,15 @@ form[ui-bar-layout] {
 .panel-layout .btn {
 	border-radius: 0;
 }
+
+/** some special classes */
+.border-left-none,
+.border-left-none.form-item-container,
+.border-left-none.form-item-container > input {
+	border-left: none;
+}
+.border-right-none,
+.border-left-none.form-item-container,
+.border-left-none.form-item-container > input  {
+	border-left: none;
+}
