Updated new module scaffolding.

--- a/axelor-shell/src/main/resources/templates/module/Entity.xml.tmpl
+++ b/axelor-shell/src/main/resources/templates/module/Entity.xml.tmpl
@@ -9,8 +9,10 @@
     <![CDATA[
     This is a simple Hello object.
     ]]>
-    <string name="code" required="true" unique="true" min="2"/>
-    <string name="name" required="true" unique="true" min="2"/>
+    <string name="title" required="true" unique="true" namecolumn="true"/>
+    <datetime name="publishedOn"/>
+    <string name="tags"/>
+    <string name="message" large="true"/>
   </entity>
   
 </domain-models>
