Fixed long labels issue (#2280)

--- a/axelor-web/src/main/webapp/css/view.form.panels.css
+++ b/axelor-web/src/main/webapp/css/view.form.panels.css
@@ -115,6 +115,9 @@ form[ui-bar-layout] {
 .panel-layout .label-item {
 	color: #999;
 	font-weight: 400;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 .panel-layout .boolean-item label,
