--- a/axelor-web/src/main/webapp/css/view.form.panels.css
+++ b/axelor-web/src/main/webapp/css/view.form.panels.css
@@ -42,6 +42,29 @@ form[ui-bar-layout] {
 	font-size: 16px;
 }
 
+.panel .panel-header .menu-bar {
+	position: relative;
+	top: -6px;
+	right: -10px;
+	margin: 0;
+}
+
+.panel .panel-header .menu-bar > .menu > a {
+	padding: 6px 10px;
+}
+
+.panel .panel-header .menu-bar .caret {
+	border-top-color: #333333 !important;
+	border-bottom-color: #333333 !important;
+	margin-top: 7px;
+}
+
+.panel .panel-header .dropdown-menu {
+	left: inherit;
+	right: 0;
+	border-radius: 0;
+}
+
 .panel .panel-body {
 	padding: 14px;	
 }
