Fixed image widget issues.

--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -438,6 +438,10 @@ td.form-item > * {
 	min-height: 250px;
 }
 
+.form-item .image-item .image-wrapper {
+	position: relative;
+}
+
 .form-item .image-item div.btn-group {
 	position: absolute;
 	left: 20px;
