--- a/axelor-web/src/main/webapp/css/view.form.panels.css
+++ b/axelor-web/src/main/webapp/css/view.form.panels.css
@@ -38,6 +38,12 @@ form[ui-bar-layout] {
 	padding: 6px 10px;
 }
 
+.panel-nested .panel-header {
+	background-color: #fff;
+	padding: 6px 0;
+	margin-bottom: 4px;
+}
+
 .panel .panel-title {
 	font-size: 16px;
 }
