Support special width for panel forms.
The "mini", "mid" or "large" widths are supported.

--- a/axelor-web/src/main/webapp/css/view.form.panels.css
+++ b/axelor-web/src/main/webapp/css/view.form.panels.css
@@ -28,6 +28,9 @@
 .bar-layout.mini-form {
 	max-width: 480px;
 }
+.bar-layout.large-form {
+	max-width: 1200px;
+}
 
 .panel-layout * {
 	box-sizing: border-box;
